<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionsActivity">

    <Button
        android:id="@+id/answerButton3"
        android:layout_width="284dp"
        android:layout_height="73dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="164dp"
        android:onClick="answerBtn3"
        android:text="@string/answer3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerbutton2" />

    <Button
        android:id="@+id/answerbutton2"
        android:layout_width="284dp"
        android:layout_height="73dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="260dp"
        android:onClick="answerBtn2"
        android:text="@string/answer2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerButton" />

    <Button
        android:id="@+id/answerButton"
        android:layout_width="284dp"
        android:layout_height="73dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="348dp"
        android:onClick="answerBtn"
        android:text="@string/answer1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestions" />

    <TextView
        android:id="@+id/textViewQuestions"
        android:layout_width="355dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="24dp"
        android:text="@string/questions_for_sit305"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/answerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="1dp"
        android:text="@string/android_question_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="284dp"
        android:layout_height="73dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="52dp"
        android:onClick="nextButton"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerButton3" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="350dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="9dp"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="301dp"
        android:layout_height="31dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="12dp"
        android:progress="1"
        android:max="5"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_1_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

</androidx.constraintlayout.widget.ConstraintLayout>